--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "nodedemo1",
+  "name": "WalleBackEnd",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
-    "mongodb":"*"
+    "mongodb":"*",
+    "fastpriorityqueue":"*"
   }
 }
